--- a/ui/common/css/abstract/_z-index.scss
+++ b/ui/common/css/abstract/_z-index.scss
@@ -26,6 +26,7 @@ $z-indexes: (
   'site-header': 106,
   'network-status': 105,
   'tour-reminder': 104,
+  'video-player': 100,
   'mz-menu': 4,
   'above-link-overlay': 3,
   'friend-box': 2,
