tweak broadcast tab style

--- a/ui/analyse/css/study/relay/_tour.scss
+++ b/ui/analyse/css/study/relay/_tour.scss
@@ -203,10 +203,10 @@
       padding: 0.8em 1.5em;
       border: $border;
       &:hover {
-        @extend %metal;
+        @extend %box-shadow;
       }
       &.active {
-        @extend %metal, %box-shadow;
+        border: 1px solid $c-brag;
       }
     }
   }
