allow broadcast tabs to wrap

--- a/ui/analyse/css/study/relay/_tour.scss
+++ b/ui/analyse/css/study/relay/_tour.scss
@@ -195,7 +195,7 @@
   }
 
   &__tabs {
-    @extend %flex-center-nowrap;
+    @extend %flex-center;
     gap: 1em;
     span {
       @extend %box-radius;
