--- a/ui/analyse/css/study/relay/_layout.scss
+++ b/ui/analyse/css/study/relay/_layout.scss
@@ -42,7 +42,7 @@ main.is-relay.has-relay-tour {
 
   @include breakpoint($mq-col3) {
     grid-template-columns: $col3-uniboard-side $block-gap var(--col3-uniboard-width) var(--gauge-gap) $col3-uniboard-table;
-    grid-template-rows: $mq-col3-side-height 2.5em;
+    grid-template-rows: $mq-col3-side-height;
     grid-template-areas:
       'side        . relay-tour relay-tour relay-tour'
       'relay-admin . relay-tour relay-tour relay-tour';
