--- a/ui/analyse/css/study/relay/_tour.scss
+++ b/ui/analyse/css/study/relay/_tour.scss
@@ -119,23 +119,25 @@
     &__mselect {
       flex: auto;
       @include fluid-size('font-size', 12px, 20px);
-      .mselect__list a {
-        gap: 1em;
-      }
-    }
-    &__round-select {
       .fullscreen-mask {
         display: block;
       }
+      .mselect__list {
+        transform: unset;
+        > * {
+          opacity: unset;
+        }
+        a {
+          gap: 1em;
+        }
+      }
+    }
+    &__round-select {
       .mselect__list {
         display: table;
         left: unset;
         right: 0;
         overflow: hidden;
-        transform: unset;
-        > * {
-          opacity: unset;
-        }
         tr {
           display: table-row;
           &.current-round {
