--- a/ui/analyse/css/study/panel/_multiboard.scss
+++ b/ui/analyse/css/study/panel/_multiboard.scss
@@ -49,10 +49,7 @@
 
   .now-playing {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(170px, 1fr));
-    @include breakpoint($mq-x-small) {
-      grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
-    }
+    grid-template-columns: repeat(auto-fit, minmax(min(100%/2, max(250px, 100%/4)), 1fr));
 
     a {
       @extend %box-radius;
