--- a/ui/ceval/css/_pv.scss
+++ b/ui/ceval/css/_pv.scss
@@ -63,7 +63,6 @@
   }
 
   .pv-board {
-    @extend %popup-shadow;
     position: absolute;
     width: 80%;
     #{$start-direction}: 34px;
@@ -75,6 +74,10 @@
 
       .cg-wrap {
         @extend %abs-100;
+      }
+      cg-container {
+        @extend %box-radius, %popup-shadow;
+        overflow: hidden;
       }
     }
   }
