Blog read more button is too long - causes overflow

--- a/ui/site/css/_blog.scss
+++ b/ui/site/css/_blog.scss
@@ -140,6 +140,14 @@
     .more {
       margin-top: 2em;
       text-align: center;
+      @include breakpoint($mq-not-small) {
+        a.button {
+          width: 80vw;
+          display: block;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
+      }
     }
   }
 
