restore broadcast search button border

--- a/ui/analyse/css/study/relay/_tour.scss
+++ b/ui/analyse/css/study/relay/_tour.scss
@@ -66,6 +66,7 @@ $hover-bg: if($theme == 'dark', rgba(#6ae, 0.3), rgba($c-primary, 0.05));
       }
     }
     &__search {
+      border-left: $border !important;
       padding: 12px;
       font-size: 1.2em;
     }
