we use em for padding so that it varies based on the viewport size
as font-size is automatically calculated from vw/vh

--- a/ui/analyse/css/study/relay/_tour.scss
+++ b/ui/analyse/css/study/relay/_tour.scss
@@ -67,8 +67,7 @@ $hover-bg: if($theme == 'dark', rgba(#6ae, 0.3), rgba($c-primary, 0.05));
     }
     &__search {
       border-left: $border !important;
-      padding: 12px;
-      font-size: 1.2em;
+      padding: 0 1.2em;
     }
     .chat__members {
       flex: 0 0 auto;
