border radius for all boards

--- a/ui/analyse/css/study/panel/_multiboard.scss
+++ b/ui/analyse/css/study/panel/_multiboard.scss
@@ -142,7 +142,7 @@
       }
     }
   }
-  .mini-game__gauge ~ .mini-game__board cg-container {
+  .mini-game__gauge ~ .mini-game__board cg-board {
     @extend %box-radius-left;
   }
 }
